fixed letter spacing

--- a/css/main.css
+++ b/css/main.css
@@ -147,6 +147,7 @@ h3 {
   line-height: normal;
   margin: 1rem;
   color: #282828;
+  letter-spacing: 2px;
 }
 
 h4 {
